# data-nl

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  sqldatabase.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: data.sql  init.sh
src/: database_retriever.py  datasource.py  llama_index.py  schemas.py  utils.py
