[project]
name = "data-nl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "llama-index>=0.12.5",
    "openai>=1.57.2",
    "ruff>=0.8.2",
    "llama-index-readers-database>=0.3.0",
    "psycopg2-binary>=2.9.10",
    "ipykernel>=6.29.5",
]
